# openil_sysrepo-tsn

./: CMakeLists.txt  README.md
CMakeModules/: FindCJSON.cmake  FindNL.cmake  FindNLGEN.cmake  FindSYSREPO.cmake  FindTSN.cmake
Instances/: README.md  flow-meters-eno0-disable.xml  flow-meters-eno0-enable.xml  flow-meters-swp0-disable.xml  flow-meters-swp0-enable.xml  ietf-br-vlan-cfg.xml  ietf-ip-cfg.xml  ietf-mac-cfg.xml  ietf-police-rate.xml  ietf-vlan-cfg.xml  qbu-eth1.xml  qbu-swp0.xml  qbu-swp1.xml  qbv-eno0-disable.xml  qbv-eno0-enable.xml  qbv-eth1-enable.xml  qbv-swp0-disable.xml  qbv-swp0-enable.xml  qbv-swp2-tc.xml  qbv-swp5-tc.xml  stream-filters-eno0-disable.xml  stream-filters-eno0-enable.xml  stream-filters-swp0-disable.xml  stream-filters-swp0-enable.xml  stream-gates-eno0-disable.xml  stream-gates-eno0-enable.xml  stream-gates-swp0-disable.xml  stream-gates-swp0-enable.xml  streamid-eno0-disable.xml  streamid-eno0-enable.xml  streamid-swp0-disable.xml  streamid-swp0-enable.xml  switch-qci-fm-gate-disable.xml  switch-qci-fm-gate-enable.xml  switch-qci-fm-swp0-disable.xml  switch-qci-fm-swp0-enable.xml  switch-qci-fm-swp2-enable.xml  switch-qci-gate-swp0-disable.xml  switch-qci-gate-swp0-enable.xml  switch-qci-gate-swp2-enable.xml  (+2 more)
modules/: ieee802-dot1q-cb-stream-identification.yang  ieee802-dot1q-qci-augment.yang  nxp-bridge-vlan-tc-flower.yang
scripts/: model-install.sh
src/: brtc_cfg.c  brtc_cfg.h  cb_streamid.c  cb_streamid.h  common.c  common.h  file_mon.c  file_mon.h  ip_cfg.c  ip_cfg.h  mac_cfg.c  mac_cfg.h  main.c  main.h  qbu.c  qbu.h  qbv.c  qbv.h  qci.c  qci.h  qci_fm.c  qci_sf.c  qci_sg.c  vlan_cfg.c  vlan_cfg.h
